[tool.poetry]
name = "vancycling-brouter-profile"
version = "0.0.0"
description = "Building BRouter profiles for cycling in Vancouver"
authors = ["Victor Villas <mail@victor.villas>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pylint = "^2.17.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
